...
        <!--Application-->
        <scene sceneID="JPo-4y-FX3">
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="Journal" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Journal" systemMenu="apple" id="uQy-DD-JDr">
                                    <items>
                                        <menuItem title="About Journal" id="5kV-Vb-QxS">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
...
            <point key="canvasLocation" x="75" y="655"/>
        </scene>
        <!--Window Controller-->
        <scene sceneID="oLw-TA-tuF">
            <objects>
                <windowController storyboardIdentifier="JournalEntryCompose" id="Bpy-ie-eL7" sceneMemberID="viewController">
                    <window key="window" title="Compose" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" frameAutosaveName="Compose" animationBehavior="default" id="VhP-ce-gJt">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="294" y="313" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1057"/>
                    </window>
                    <userDefinedRuntimeAttributes>
...
                                    <animations/>
                                </scroller>
                            </scrollView>
                            <button verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ts3-ha-qg5">
                                <rect key="frame" x="395" y="13" width="71" height="32"/>
                                <animations/>
                                <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="vox-G7-0MD">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="finishAndRecordEntry:" target="7tj-li-7GF" id="ip3-dB-ZLo"/>
                                </connections>
...
